--- a/src/components/FloatingDiv/FloatingDiv.css
+++ b/src/components/FloatingDiv/FloatingDiv.css
@@ -1,6 +1,6 @@
 .floatingDiv {
   justify-content: space-around;
-  background: white;
+  background: rgb(230, 176, 209);
   box-shadow: var(--boxShadow);
   border-radius: 17px;
   display: flex;
