--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -36,5 +36,9 @@
   width: 19rem;
   filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
   border-radius: 19px;
+  transition: 0.5s;
 }
 
+.portfolio img:hover{
+  width: 21rem;
+}
