--- a/src/components/Testimonials/Testimonial.css
+++ b/src/components/Testimonials/Testimonial.css
@@ -41,11 +41,18 @@
     border: 7px solid var(--blueCard);
     box-shadow: var(--boxShadow);
     border-radius: 20px;
+    transition: 0.3s;
 }
+
 .testimonial>img{
     width: 6rem;
     height: 6rem;
     border-radius: 100%;
+    transition: 0.5s;
+}
+.testimonial>img:hover{
+    width: 8rem;
+    height: 8rem;
 }
 .testimonial>span{
     color: var(--gray);
