--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -55,6 +55,24 @@
   left: -18rem;
 }
 
+
+@media screen and (max-width:1199px){
+  .services{
+    margin-top: 0;
+    flex-direction: column;
+    gap: 5rem;
+    padding: 0;
+    height: 66rem;
+  }
+  .cards{
+    flex-direction: column;
+    gap: 17rem;
+  }
+  .cards > * {
+    position: relative;
+    margin-left: 4rem;
+  }
+}
 @media screen and (max-width: 600px) {
   .services {
     margin-top: 0;
@@ -71,5 +89,6 @@
   }
   .cards > * {
     position: static;
+    margin-left: 0;
   }
 }
